<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_blue"
    tools:context=".userDataCollection.view.UserDataInputFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <TextView
        android:id="@+id/user_input_text"
        android:layout_width="@dimen/density_independent_pixel_0dp"
        android:layout_height="wrap_content"
        android:text="@string/let_us_know_you_better"
        android:gravity="center"
        android:textSize="@dimen/text_dimension_30sp"
        android:fontFamily="@font/satisfy"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintBottom_toTopOf="@+id/user_input_image"
        />

    <ImageView
        android:id="@+id/user_input_image"
        android:layout_width="@dimen/density_independent_pixel_120dp"
        android:layout_height="@dimen/density_independent_pixel_120dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/density_independent_pixel_12dp"
        android:src="@drawable/upload_image"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_input_text"
        android:contentDescription="@string/this_is_placeholder_for_user_to_upload_his_profile_image"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_input_image_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/density_independent_pixel_8dp"
        android:text="@string/upload_your_image"
        android:gravity="center"
        android:textSize="@dimen/text_dimension_14sp"
        android:fontFamily="@font/poppin"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_input_image"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/user_input_full_name"
        android:layout_width="@dimen/density_independent_pixel_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_text_shape"
        android:fontFamily="@font/poppin"
        android:hint="@string/enter_your_full_name"
        android:inputType="textEmailAddress"
        android:padding="@dimen/density_independent_pixel_6dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_dimension_24sp"
        android:layout_marginTop="@dimen/density_independent_pixel_12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_input_image_tag"
        android:autofillHints="name"
        />

    <EditText
        android:id="@+id/user_input_user_name"
        android:layout_width="@dimen/density_independent_pixel_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_text_shape"
        android:fontFamily="@font/poppin"
        android:hint="@string/enter_user_name"
        android:inputType="textEmailAddress"
        android:padding="@dimen/density_independent_pixel_6dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_dimension_24sp"
        android:layout_marginTop="@dimen/density_independent_pixel_12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_input_full_name"
        android:autofillHints="username"
        />

    <EditText
        android:id="@+id/user_input_desc"
        android:layout_width="@dimen/density_independent_pixel_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_text_shape"
        android:fontFamily="@font/poppin"
        android:hint="@string/user_intoduction"
        android:padding="@dimen/density_independent_pixel_6dp"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="5"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/text_dimension_24sp"
        android:layout_marginTop="@dimen/density_independent_pixel_12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_input_user_name"
        android:autofillHints="name"/>


    <Button
        android:id="@+id/submit_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:padding="@dimen/density_independent_pixel_16dp"
        android:text="@string/submit_my_details"
        android:fontFamily="@font/poppin"
        android:textColor="@color/white"
        android:textSize="@dimen/text_dimension_18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />


</androidx.constraintlayout.widget.ConstraintLayout>