<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/density_independent_pixel_16dp"
        android:layout_marginEnd="@dimen/density_independent_pixel_52dp"
        android:layout_marginBottom="@dimen/density_independent_pixel_40dp"
        android:contentDescription="@string/menu_icon"
        android:src="@drawable/menu_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/menu_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_icon"
        android:layout_marginBottom="@dimen/density_independent_pixel_20dp"
        android:contentDescription="@string/menu_item_1"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/menu_icon"
        app:layout_constraintEnd_toEndOf="@id/menu_icon"
        app:layout_marginBaseline="@dimen/density_independent_pixel_20dp" />

    <ImageView
        android:id="@+id/menu_item_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/create_icon"
        android:layout_marginBottom="@dimen/density_independent_pixel_20dp"
        android:contentDescription="@string/menu_item_2"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/menu_item_1"
        app:layout_constraintEnd_toEndOf="@id/menu_icon"
        app:layout_marginBaseline="@dimen/density_independent_pixel_20dp" />

    <ImageView
        android:id="@+id/menu_item_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/preview_icon"
        android:layout_marginBottom="@dimen/density_independent_pixel_20dp"
        android:contentDescription="@string/menu_item_2"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/menu_item_2"
        app:layout_constraintEnd_toEndOf="@id/menu_icon"
        app:layout_marginBaseline="@dimen/density_independent_pixel_20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>